# parallel-systems

./: .gitignore  Rakefile  ReadMe.md  a01.md
a01/: ReadMe.md  hostname.sh  osu.sh
a02/: ReadMe.md  boost.hpp  parse_ull.hpp  shared.mk
a02/e01/: .gitignore  Cargo.toml  Makefile  pi_mpi.cpp  pi_mpi.rs  pi_mpi.sh  pi_mpi_rust.sh  pi_seq.cpp
a02/e02/: .gitignore  Cargo.toml  Makefile  heat_stencil.hpp  heat_stencil_1d.hpp  heat_stencil_1d_mpi.cpp  heat_stencil_1d_mpi.rs  heat_stencil_1d_seq.cpp
a02/heat_stencil_1d/: heat_stencil_1d_seq.cpp
a03/: ReadMe.md  parse_ull.hpp  shared.mk
a03/e01/: Makefile  heat_stencil.hpp  heat_stencil_2d.hpp  heat_stencil_2d_mpi.cpp  heat_stencil_2d_seq.cpp
a03/e02/: heat_stencil_3d.hpp  heat_stencil_3d_mpi.cpp  heat_stencil_3d_seq.cpp  heat_stencil_3d_serialize.hpp
a04/: ReadMe.md
a05/: ReadMe.md
a06/: ReadMe.md
a07/: Makefile  ReadMe.md  nbody_omp.cpp
a08/: ReadMe.md
a09/: ReadMe.md  nqueens.hpp  nqueens_omp.cpp  nqueens_seq.cpp
a10/: Makefile  ReadMe.md  heat_stencil_2d_mpi_omp.cpp
a11/: Makefile  ReadMe.md  c_timers.c  globals.h  npbparams.h  print_results.c  print_results.h  real.c  type.h  wtime.h
a12/: .gitignore  Makefile  ReadMe.md  mat_mul.chpl  pi.chpl
chart/: index.js  package.json
docker/: Dockerfile  cluster.sh  docker-compose.yml  swarm.sh
rakelib/: a01.rake  a02.rake  a03.rake  a04.rake  a05.rake  a06.rake  a07.rake  a10.rake  a11.rake  a12.rake  docker.rake  lcc2.rake  lcc2_setup.rake  svg.rake
shared/: boost.hpp  heat_stencil.hpp  heat_stencil_2d.hpp  nbody.hpp  shared.mk  vector.hpp
(+24 files in other folders)
